# qrane

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.txt  blake-vars.sh  check.c  check.qasm  checkgraph.txt  compile_commands.json  maxfuse_isomorphism.txt  minfuse_isomorphism.txt  prep-qasm.sh  qft_gen.qasm  qrane-parser.c  qrane-parser.h  qrane-parser.output  qrane-parser.y  qrane-scanner.c  qrane_api.cpp  qrane_driver.cpp  qrane_install.sh  qrane_parser.y  qrane_scanner.yy  raw-circuit.txt  test.qasm  test_driver.cpp
barvinok-0.41.4/: 4coins  Makefile  barvinok-uninstalled.pc  barvinok-uninstalled.sh  barvinok_bound  barvinok_count  barvinok_ehrhart  barvinok_enumerate  barvinok_enumerate_e  barvinok_summate  barvinok_union  cone_hilbert_basis  cone_integer_hull  config.status  iscc  lexmin  libbarvinok.la  libtool  polyhedron_integer_hull  polyhedron_sample  polytope_lattice_width  polytope_scan  polytope_volume  randomtest  remove_redundant_equalities  semigroup_holes  test  test_approx  test_bound  testlib  vector_partition_chambers  verify_lexsmaller
barvinok-0.41.4/.deps/: 4coins.Po  NTL_QQ.Plo  barvinok.Plo  barvinok_count.Po  barvinok_e.Plo  barvinok_ehrhart.Po  barvinok_ehrhart_options.Po  barvinok_enumerate.Po  barvinok_enumerate_e-barvinok_enumerate_e.Po  barvinok_enumerate_e-barvinok_enumerate_e_options.Po  barvinok_enumerate_e-evalue_convert.Po  barvinok_enumerate_e-evalue_convert_options.Po  barvinok_enumerate_e-fdstream.Po  barvinok_enumerate_e-skewed_genfun.Po  barvinok_enumerate_e-verif_ehrhart.Po  barvinok_enumerate_e-verify.Po  barvinok_enumerate_e-verify_series.Po  barvinok_enumerate_options.Po  barvinok_summate.Po  barvinok_union.Po  barvinok_union_options.Po  basis_reduction.Plo  bernoulli.Plo  bfcounter.Plo  binomial.Plo  bound.Po  cone_hilbert_basis.Po  cone_integer_hull.Po  conversion.Plo  counter.Plo  decomposer.Plo  dpoly.Plo  edomain.Po  euler.Plo  evalue.Plo  evalue_convert.Po  evalue_convert_options.Po  evalue_isl.Plo  evalue_read.Po  evalue_util.Po  (+56 more)
barvinok-0.41.4/.libs/: 4coins  barvinok_bound  barvinok_count  barvinok_enumerate_e  barvinok_summate  barvinok_union  cone_hilbert_basis  cone_integer_hull  iscc  lexmin  polyhedron_integer_hull  polyhedron_sample  polytope_lattice_width  polytope_volume  randomtest  remove_redundant_equalities  semigroup_holes  test  test_approx  test_bound  testlib  vector_partition_chambers  verify_lexsmaller
barvinok-0.41.4/doc/: Makefile
barvinok-0.41.4/isl/: Makefile  config.status  isl-uninstalled.pc  isl-uninstalled.sh  isl_bound  isl_cat  isl_closure  isl_codegen  isl_flow  isl_flow_cmp  isl_pip  isl_polyhedron_detect_equalities  isl_polyhedron_minimize  isl_polyhedron_sample  isl_polytope_scan  isl_schedule  isl_schedule_cmp  isl_test  isl_test_cpp  isl_test_int  libisl.la  libtool
barvinok-0.41.4/parker/: Makefile
barvinok-0.41.4/polylib/: Makefile  Zpolytestgmp  c2p  config.status  count  disjoint_union_adj  disjoint_union_sep  ehrhart_lower_bound  ehrhart_quick_apx  ehrhart_rankinggmp  ehrhart_uniongmp  ehrhart_upper_bound  example  findv  libpolylibgmp.la  libtool  polylibgmp-uninstalled.pc  polylibgmp-uninstalled.sh  polylibgmp.pc  polytestgmp  ppgmp  r2p  testCompressParmsgmp  testehrhartgmp  testlib  verif_ehrhartgmp
barvinok-0.41.4/zsolve/: Makefile  zsolve
bison-3.3/: Makefile  config.status
bison-3.3/etc/: bench.pl
bison-3.3/lib/: config.h  configmake.h
bison-3.3/po/: Makefile
bison-3.3/runtime-po/: Makefile  Makefile.in
bison-3.3/src/: bison
bison-3.3/tests/: atconfig  atlocal  bison
cmake/: FindGMP.cmake
codegen/qasmbench-large/: bigadder_n18.qasm  (+7 more)
include/: qrane_arglist.hh  qrane_argument.hh  qrane_codegen.hh  qrane_ctr.hh  qrane_deps.hh  qrane_deps.hpp  qrane_domain.hh  qrane_domain.hpp  qrane_element.hh  qrane_exp.hh  qrane_explist.hh  qrane_general.hh  qrane_general.hpp  qrane_graph.hh  qrane_graph.hpp  qrane_host.hh  qrane_host.hpp  qrane_id.hpp  qrane_mainprogram.hh  qrane_mainprogram.hpp  qrane_options.hpp  qrane_parameter.hh  qrane_program.hpp  qrane_qop.hh  qrane_reg.hh  qrane_scop.hh  qrane_scop.hpp  qrane_shared.hh  qrane_shared.hpp  qrane_statement.hh  qrane_statement.hpp  qrane_utils.hh  qrane_utils.hpp
lib/: CMakeLists.txt  VERSIONS.txt
old/: old_driver.cpp  old_libdriver.cpp  old_qrane_mainprogram.cc  old_qrane_mainprogram.hh  unused_qrane_deps.cc  unused_qrane_domain.cc  unused_qrane_mainprogram.cc
parser/: qrane_parser.y  qrane_scanner.yy
sabretest/: gen_0.qasm  gen_1.qasm  gen_100.qasm  gen_101.qasm  gen_102.qasm  gen_104.qasm  gen_105.qasm  gen_106.qasm  gen_108.qasm  gen_11.qasm  gen_110.qasm  gen_112.qasm  gen_113.qasm  gen_114.qasm  gen_115.qasm  gen_116.qasm  gen_117.qasm  gen_119.qasm  gen_12.qasm  gen_123.qasm  gen_125.qasm  gen_130.qasm  gen_132.qasm  gen_133.qasm  gen_134.qasm  gen_135.qasm  gen_136.qasm  gen_137.qasm  gen_139.qasm  gen_141.qasm  gen_142.qasm  gen_144.qasm  gen_145.qasm  gen_146.qasm  gen_16.qasm  gen_17.qasm  gen_19.qasm  gen_2.qasm  gen_21.qasm  gen_23.qasm  (+49 more)
scripts/: test_collect_parallel.py
src/: CMakeLists.txt  qrane.h  qrane_api.cpp  qrane_arglist.cc  qrane_arglist.hh  qrane_argument.cc  qrane_argument.cpp  qrane_argument.hh  qrane_argument.hpp  qrane_codegen.cc  qrane_codegen.cpp  qrane_codegen.hh  qrane_codegen.hpp  qrane_ctr.hh  qrane_decl.cc  qrane_decl.cpp  qrane_decl.hh  qrane_decl.hpp  qrane_dependence_profile.cpp  qrane_dependence_profile.hpp  qrane_deps.cc  qrane_deps.cpp  qrane_deps.hh  qrane_domain.cc  qrane_domain.cpp  qrane_domain.hh  qrane_driver.cpp  qrane_element.cc  qrane_element.cpp  qrane_element.hpp  qrane_exception.hpp  qrane_exp.cc  qrane_exp.hh  qrane_explist.cc  qrane_explist.hh  qrane_general.hh  qrane_general.hpp  qrane_graph.hpp  qrane_host.cc  qrane_host.cpp  (+38 more)
src/parser/: qrane_argument.cpp  qrane_decl.cpp  qrane_scanner.yy
src/parsing/: qrane_argument.cpp  qrane_qop.cpp
tket/: tket-queko-bigd-write-all-maxfuse-fixed.txt  tket-queko-bigd-write-all-maxfuse.txt  tket-queko-bigd-write-all-minfuse-fixed.txt  tket-queko-bigd-write-all-minfuse.txt
topologies/: tokyo.ag
(+3134 files in other folders)
